# ns_server

./: .copyrightignore  .edts  .gitignore  AGENTS.md  CMakeLists.txt  GNUmakefile  README.markdown  cbbrowse_logs  cbcollect_info  cbcollect_info.in  cbcollect_test.py  cluster_connect  cluster_run  configure  couchbase-server.sh.in  go.mod  go.sum  rebar.config  rebar.config.in  rebar.config.script  requirements.txt  validate-cpu-microarchitecture.sh
api_tests/: CMakeLists.txt  README  authn_tests.py  auto_compaction_test.py  auto_failover_test.py  bucket_deletion_test.py  bucket_test.py  dummy_test.py  ldap_tests.py  requirements.txt  run.py  saml_tests.py  sample_buckets.py  tasks_test.py  testlib.py
api_tests/testlib/: __init__.py  cluster.py  node.py  requirements.py  testlib.py
apps/ale/: .gitignore  rebar.config
apps/config_remap/: CMakeLists.txt  README.md  rebar.config
apps/config_remap/src/: config_remap.erl
apps/ns_babysitter/: rebar.config  rebar.config.in  rebar.config.script
apps/ns_common/: rebar.config
apps/ns_couchdb/: rebar.config
apps/ns_server/: rebar.config  rebar.config.in  rebar.config.script
cluster_tests/: CMakeLists.txt  README  alerting_tests.py  authn_tests.py  auto_compaction_test.py  auto_failover_test.py  bucket_deletion_test.py  bucket_migration_test.py  bucket_test.py  cbauth_cache_config_tests.py  cert_load_tests.py  collection_tests.py  dummy_test.py  get_pip.cmake  internal_creds_rotation_tests.py  ldap_tests.py  node_addition_tests.py  pass_hashing_settings_tests.py  prom_sd_config_test.py  requirements.txt  resource_management_test.py  run.py  saml_tests.py  sample_buckets.py  secret_management_tests.py  serviceless_node_tests.py  stats_tests.py  tasks_test.py  users_backup_tests.py
cluster_tests/testlib/: __init__.py  cluster.py  mock_smtp_server.py  node.py  requirements.py  test_tag_decorator.py  testlib.py  util.py
cluster_tests/testsets/: alerting_tests.py  app_telemetry_tests.py  audit_tests.py  authn_tests.py  auto_compaction_test.py  auto_failover_test.py  bucket_deletion_test.py  bucket_dirs_cleanup_tests.py  bucket_migration_test.py  bucket_test.py  cbcollect_tests.py  ce_rebalance_tests.py  cert_load_tests.py  cli_integration_tests.py  collection_tests.py  config_remap_tests.py  credential_store_tests.py  crl_tests.py  crud_tests.py  external_catalog_tests.py  external_collection_tests.py  fusion_tests.py  hard_reset_test.py  internal_creds_rotation_tests.py  jwt_tests.py  ldap_tests.py  metakv2_tests.py  metakv_tests.py  native_encryption_tests.py  node_addition_tests.py  node_remap_tests.py  pass_hashing_settings_tests.py  prom_sd_config_test.py  rebalance_tests.py  resource_management_test.py  rest_eject_test.py  saml_tests.py  sample_buckets.py  secret_management_tests.py  serviceless_node_tests.py  (+9 more)
cmake_modules/: couchbase-server-black-duck-manifest.yaml  do-dialyzer.cmake  do-test.cmake
doc/: README.md  api.txt  external-catalogs-api.json  external_collections_validation.md  mb_master_state_diagram.md  ns-server-hierarchy.txt  rebalance-flow.md
doc/credentials/: README.md  architecture.md  credential-types.md  rest-api-reference.md  service-integration-guide.md
etc/: analytics_profile  analytics_provisioned_profile  audit_descriptor.json  capi.ini.in  columnar_profile  columnar_provisioned_profile  create-provisioned-cgroups.sh  default_profile  default_profile.in  hosts.cfg  metrics_metadata.json  provisioned_profile  serverless_profile  serverless_profile.in  ssl_dist_opts.in  static_config.in
git_hooks/: passthrough
include/: bucket_hibernation.hrl  couch_api_wrap.hrl  cut.hrl  generic.hrl  mc_constants.hrl  mc_entry.hrl  menelaus_web.hrl  ns_bucket.hrl  ns_common.hrl  ns_config.hrl  ns_heart.hrl  ns_log.hrl  ns_stats.hrl  ns_test.hrl  ns_version_info.hrl  pipes.hrl  rbac.hrl  service_api.hrl  xdc_replicator.hrl
licenses/: BSD-erlang-training.txt  BSD-moon.txt  MIT-cnv.txt  MIT-jose.txt
priv/: kv_stats_mappings.txt
pylib/: cbcollect_test.py  cluster_run_lib.py  evil_pipes.py  gosecrets_client_lib.py  installed_script_helpers.py
scripts/: allocators.awk  analyze-rebalance-waiting.rb  analyze-takeovers.rb  ast.sh  base-test.rb  cbdump-config  cluster_run_wrapper  compile-reload-changed.rb  copyright  dump-bucket-deks  dump-guts  dump-keys  dump-stats  echo-server.rb  escript-wrapper  exercise-vbmap.rb  fake-phone-home  fix_undefined_storage_mode  generate-deeper-cert.go  generate-kv-stats-mappings.erl  generate_coverage_report.escript  generate_index_workload.py  indent_erl.el  indent_erl.sh  master_events_2_gtrace  master_events_epoch_time_converter.py  memory_monitor.sh  merge_distributed_logs  node_remap  node_remap.py  parse_stats_log.py  pressure_from_stats.py  proxy-testing.rb  proxyrb.rb  rebalance_analyser.py  rebuild_replicas.sh  rebuild_vbuckets_on_nodes.sh  reformat-master-events.rb  remove_stats.erl  rest-methods.rb  (+15 more)
src/: active_cache.erl  addr_util.erl  alternate_addresses.erl  analytics_settings_manager.erl  async.erl  auto_failover.erl  auto_failover_logic.erl  auto_rebalance.erl  auto_rebalance_settings.erl  auto_reprovision.erl  backoff.erl  base_stats_collector.erl  bucket_info_cache.erl  bucket_placer.erl  capi_crud.erl  cb_creds_rotation.erl  cb_dist.erl  cb_epmd.erl  cb_log_counter_sink.erl  cb_saml.erl  cb_stats_info.erl  cb_util.erl  chronicle_compat.erl  chronicle_compat_events.erl  chronicle_kv_log.erl  chronicle_local.erl  chronicle_master.erl  chronicle_upgrade.erl  ciphers.erl  cluster_compat_mode.erl  cluster_logs_collection_task.erl  cluster_logs_sup.erl  collections.erl  compaction_api.erl  compaction_daemon.erl  compaction_dbs.erl  compaction_new_daemon.erl  compaction_scheduler.erl  compat_mode_manager.erl  config_profile.erl  (+325 more)
test/: cut_tests.erl  failover_tests.erl  gen_server2_tests.erl  health_monitor_tests.erl  io_lib_tests.erl  leader_registry_tests.erl  misc_tests.erl  mock_helpers.erl  ns_config_mock_tests.erl  ns_config_tests.erl  supervisor_tests.erl  t.erl  triq_utils.erl  tty_safe_stderr_sink.erl  vbucket_move_scheduler_validation.erl
(+2008 files in other folders)
